--- a/cv.html
+++ b/cv.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>PORTFOLIO</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <header>
@@ -23,22 +23,33 @@
         </form>
       </div>
   </header>
-  <section class="">
-    <div class="cv">
-        <h2>MILAN SHRESTHA</h2><br>
-        <h3>Personal Details:-<h3>
-          <p>Name: Mr.  Milan Shrestha<p>
-            <p>Father's Name: Mr. Bishnu Prasad Shrestha<p>
-              <P>D.O.B(Date Of Birth): 24 may 1995<p>
-                <p>Gender: Male<p>
-                  <p>Marital Status: Unmarried<p>
-                    <P>Permanent Address: Budhanilkhantha-14, kapan, Kathmandu<p>
-                      <p>Nationality: Neplease<p>
-                        <p>Relesion: Hindu<p>
-                          <P>Language Known: Nepali, English and Hindi<p>
-                            <p>Contact No: +977 9846429243<p><br>
-                              <h3>Education Qualification:-<h3>
-     </div>
+  <section class="cvsection">
+
+      <div class="milan">
+
+        <h1>MILAN SHRESTHA</h1>
+      </div>
+      <div class="cv">
+        <div class=aboutme>
+          <h2>Personal Details:-<h2>
+            <ul>
+              <li>Name: Mr.  Milan Shrestha
+              <li>Father's Name: Mr. Bishnu Prasad Shresth
+              <li>D.O.B(Date Of Birth): 24 may 1995
+              <li>Gender: Male
+              <li>Marital Status: Unmarried
+              <li>Permanent Address: Budhanilkhantha-14, kapan, Kathmandu
+              <li>Nationality: Neplease
+              <li>Religion: Hindu
+              <li>Language Known: Nepali, English and Hindi
+              <li>Contact No: +977 9846429243
+            </ul>
+          </div>
+          <div class="education">
+              <h2>Education Qualification:</h2>
+          </div>
+      </div>
+
   </section>
     <footer>
           <p>milan,Copyright &copy; 2017</p>
