--- a/contact.html
+++ b/contact.html
@@ -24,24 +24,26 @@
       </form>
     </div>
   </header>
-  <section>
+  <section class="contact">
     <div class="form">
       <form>
-        <label for="fname">Name</label>
-        <input type="text" id="fname" name="fname">
-        <label for="lname">Email ID</label>
-        <input type="text" id="lname" name="lname">
-        <label for="lname">Message</label>
-        <textarea>msg...</textarea>
+        <label>Name</label><br>
+        <input type="text" id="fname" name="fname" placeholder="enter your first name"><br><br>
+        <label>Email ID</label><br>
+        <input type="text" id="lname" name="lname" placeholder="enter your surname"><br><br>
+        <label>Subject</label><br>
+        <input type="text" id="subject" name="subject" placeholder="subject"><br><br>
+        <label>Message</label><br>
+        <textarea rows="10" cols="30" placeholder="msg..."></textarea><br><br>
         <input type="submit" value="submit">
      </form>
    </div>
-     <div class="tel">
+    <div class="tel">
        <h3>Tel No:<h3>
          <p>+977 9846429243<p><br>
            <h3>Email-ID:<h3>
              <p>maya_np2001@yahoo.com<p>
-     </div>
+   </div>
   </section>
     <footer>
           <p>milan,Copyright &copy; 2017</p>
