--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,9 @@
            <h3>Email-ID:<h3>
              <p>maya_np2001@yahoo.com<p>
    </div>
+   <div class="foto">
+     <img src="image/jhanda.JPG" alt="Sorry image couldn't be loaded">
+   </div>
   </section>
     <footer>
           <p>milan,Copyright &copy; 2017</p>
