--- a/cv.html
+++ b/cv.html
@@ -31,22 +31,46 @@
       </div>
       <div class="cv">
         <div class=aboutme>
-          <h2>Personal Details:-<h2>
+          <h2>Personal Details</h2>
             <ul>
-              <li>Name: Mr.  Milan Shrestha
-              <li>Father's Name: Mr. Bishnu Prasad Shresth
-              <li>D.O.B(Date Of Birth): 24 may 1995
-              <li>Gender: Male
-              <li>Marital Status: Unmarried
-              <li>Permanent Address: Budhanilkhantha-14, kapan, Kathmandu
-              <li>Nationality: Neplease
-              <li>Religion: Hindu
-              <li>Language Known: Nepali, English and Hindi
-              <li>Contact No: +977 9846429243
+              <li>Name: Mr.  Milan Shrestha</li>
+              <li>Father's Name: Mr. Bishnu Prasad Shresth</li>
+              <li>D.O.B(Date Of Birth): 24 may 1995</li>
+              <li>Gender: Male</li>
+              <li>Marital Status: Unmarried</li>
+              <li>Permanent Address: Budhanilkhantha-14, kapan, Kathmandu</li>
+              <li>Nationality: Neplease</li>
+              <li>Religion: Hindu</li>
+              <li>Contact No: +977 9846429243</li>
             </ul>
+            <h2>Language</h2>
+              <ul>
+                <li>Nepali</li>
+                <li>English</li>
+                <li>Hindi</li>
+              </ul>
           </div>
           <div class="education">
-              <h2>Education Qualification:</h2>
+              <h2>Education</h2>
+                <ul>
+                  <li>Graduated SLC in 2011</li>
+                  <li>Graduated +2 in 2013</li>
+                  <li>been reading at NAMI college, The University of Northamptom</li>
+                </ul>
+                <h2>Skills</h2>
+                  <ul>
+                    <li>HTML5</li>
+                    <li>CSS</li>
+                    <li>Java Programming</li>
+                    <li>C and C++ programming</li>
+
+                  </ul>
+                  <h2>Experience</h2>
+                  <ul>
+                    <li>Worked as office assistance for two years from 2013 to 2015</li>
+                    <li>worked in the workshop of NAMI college</li>
+                  </ul>
+
           </div>
       </div>
 
