--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <header>
   <div class="logo">
-  <img src="image/milawn.jpg">
+  <img src="image/milawn.jpg" alt="sorry image couldn't be loaded">
   </div>
     <div class="nav">
       <ul>
@@ -25,7 +25,7 @@
   </header>
   <section class="home">
     <div class="image">
-        <img src="image/milam.JPG" width="250" height="300">
+        <img src="image/milam.JPG" alt="image couldn't be loaded">
     </div>
     <div class="main">
       <h2 class="name">HELLO! I am <span style="color:white">MILAN SHRESTHA.</span></h2>
