--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>PORTFOLIO</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <header>
@@ -11,10 +12,10 @@
   </div>
     <div class="nav">
       <ul>
-        <li><a class="homeblack" href="index.html">HOME</a></li>
-        <li><a class="homeblack" href="bio.html">ABOUT ME</a></li>
-        <li><a class="homeblack" href="cv.html">CV</a></li>
-        <li><a class="homeblack" href="contact.html">CONTACT</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="bio.html">BIOGRAPHY</a></li>
+        <li><a href="cv.html">CV</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
       </ul>
     </div>
       <div class="search">
@@ -28,15 +29,23 @@
         <img src="image/milam.JPG" alt="image couldn't be loaded">
     </div>
     <div class="main">
-      <h2 class="name">HELLO! I am <span style="color:white">MILAN SHRESTHA.</span></h2>
+      <h2 class="name">HELLO! I am MILAN SHRESTHA.</h2>
       <p>hello ma mailjnfdhabkdb fuygfiuhn9f iffiiuhf ifgiyfi ifiwhf ifguygf f giqugfyu
         ahsbdnhaisud iehfiuwf eehfiuhwef qwoueehfiuhw fhywniufeh wuufy9wur 8ueefh8whye 8ygfe 98ywehrf 8qwehfiy<p>
     </div>
 
   </section>
-    <footer>
-          <p>milan,Copyright &copy; 2017.All right reserved.</p>
-    </footer>
+  <footer>
+    <div class="icon">
+    <a href="https://wwww.facebook.com/"><i class="fa fa-facebook-official"></i></a>
+    <a href="https://wwww.twitter.com/"><i class="fa fa-twitter-square"></i></a>
+    <a href="https://wwww.yahoo.com/"><i class="fa fa-yahoo"></i></a>
+    <a href="https://wwww.google.com/"><i class="fa fa-google-plus-square"></i></a>
+   </div>
+   <div class="copy">
+      <p>milan,Copyright &copy; 2017.All rights reserved.</p>
+   </div>
+  </footer>
   </div>
 </body>
 </html>
