adding README.docx

--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
 <body>
 <header>
   <div class="logo">
-  <img src="image/milawn.jpg">
+<a href="index.html"><img src="image/milawn.jpg" alt="sorry image couldn't be loaded"></a>
   </div>
     <div class="nav">
       <ul>
@@ -18,11 +18,16 @@
         <li><a href="contact.html">CONTACT</a></li>
       </ul>
     </div>
-      <div class="search">
-        <form>
-          <input type="text" name="search" placeholder="Search..">
-        </form>
+    <div class="search">
+      <div class="sea">
+            <form>
+              <input type="text" name="search" placeholder="Search..">
+            </form>
       </div>
+      <div class="searchicon">
+          <input type="submit" value="search">
+      </div>
+    </div>
   </header>
   <section class="cvsection">
 
