--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
+<!-- Name: Milan Shrestha
+UN ID:16418532
+-->
 <html>
 <head>
   <title>PORTFOLIO</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--this property is used for the link that helps to insert icons-->
 </head>
 <body>
 <header>
   <div class="logo">
-  <img src="image/milawn.jpg" alt="sorry image couldn't be loaded">
+  <a href="index.html"><img src="image/milawn.jpg" alt="sorry image couldn't be loaded"></a>
   </div>
     <div class="nav">
       <ul>
@@ -19,9 +22,14 @@
       </ul>
     </div>
       <div class="search">
-        <form>
-          <input type="text" name="search" placeholder="Search..">
-        </form>
+        <div class="sea">
+              <form>
+                <input type="text" name="search" placeholder="Search..">
+              </form>
+        </div>
+        <div class="searchicon">
+            <input type="submit" value="search">
+        </div>
       </div>
   </header>
   <section class="home">
