--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 <body>
 <header>
   <div class="logo">
-  <img src="image/milawn.jpg">
+  <a href="index.html"><img src="image/milawn.jpg" alt="sorry image couldn't be loaded"></a>
   </div>
     <div class="nav">
       <ul>
@@ -19,11 +19,16 @@
       </ul>
 
     </div>
-    <div class="search">
-      <form>
-        <input type="text" name="search" placeholder="Search..">
-      </form>
-    </div>
+      <div class="search">
+        <div class="sea">
+              <form>
+                <input type="text" name="search" placeholder="Search..">
+              </form>
+        </div>
+        <div class="searchicon">
+            <input type="submit" value="search">
+        </div>
+      </div>
   </header>
   <section class="contact">
     <div class="form">
