comment in the index.html file

--- a/contact.html
+++ b/contact.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
+<!-- Name: Milan Shrestha
+UN ID:16418532
+-->
 <html>
-<head>
-  <title>PORTFOLIO</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-<header>
-  <div class="logo">
-  <a href="index.html"><img src="image/milawn.jpg" alt="sorry image couldn't be loaded"></a>
-  </div>
-    <div class="nav">
+<head><!--head starts here-->
+  <title>PORTFOLIO</title><!--this is for title-->
+  <link rel="stylesheet" type="text/css" href="css/style.css"><!--this property is to link with the css for styling web page-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--this property is used for the link that helps to insert icons-->
+</head><!--head ends here-->
+<body><!--body starts from here-->
+<header><!--header inside body starts from here-->
+  <div class="logo"><!--this division is for logo section inside header-->
+  <a href="index.html"><img src="image/milawn.jpg" alt="sorry image couldn't be loaded"></a><!--this property is for inserting the logo picture in the header and link while clicking on logo to go to home page-->
+</div><!--logo division ends here-->
+    <div class="nav"><!--this new division is for navigation section to make navigation bar-->
       <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="bio.html">BIOGRAPHY</a></li>
-        <li><a href="cv.html">CV</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="index.html">HOME</a></li><!--this property helps us to make navigation bar named home and to link between other navigations tags-->
+        <li><a href="bio.html">BIOGRAPHY</a></li><!--this property helps us to make navigation bar named biography and to link between other navigations tags-->
+        <li><a href="cv.html">CV</a></li><!--this property helps us to make navigation bar named cv and to link between other navigations tags-->
+        <li><a href="contact.html">CONTACT</a></li><!--this property helps us to make navigation bar named contact and to link between other navigations tags-->
       </ul>
-
-    </div>
-      <div class="search">
-        <div class="sea">
-              <form>
-                <input type="text" name="search" placeholder="Search..">
-              </form>
-        </div>
-        <div class="searchicon">
-            <input type="submit" value="search">
-        </div>
-      </div>
-  </header>
+    </div><!--division for navigation bar ends here-->
+      <div class="search"><!--on this new division this is for search inside the header-->
+        <div class="sea"><!--this division is inside the search division to make search bar-->
+              <form><!--this property is for form,this tag helps us to make search-->
+                <input type="text" name="search" placeholder="Search.."><!--this is to creat search bar-->
+              </form><!--form tag ends here-->
+        </div><!--division for class sea ends here-->
+        <div class="searchicon"><!--this is the new division inside the class search to creat new class search icon or botton-->
+            <input type="submit" value="search"><!--this helps us to creat botton-->
+        </div><!--division of class searchicon ends here-->
+      </div><!--the search class division ends here-->
+  </header><!--header of this page ends here-->
   <section class="contact">
     <div class="form">
       <form>
@@ -54,16 +56,16 @@
      <img src="image/jhanda.JPG" alt="Sorry image couldn't be loaded">
    </div>
   </section>
-  <footer>
-    <div class="icon">
-    <a href="https://wwww.facebook.com/"><i class="fa fa-facebook-official"></i></a>
-    <a href="https://wwww.twitter.com/"><i class="fa fa-twitter-square"></i></a>
-    <a href="https://wwww.yahoo.com/"><i class="fa fa-yahoo"></i></a>
-    <a href="https://wwww.google.com/"><i class="fa fa-google-plus-square"></i></a>
-   </div>
-  <div class="copy">
-      <p>milan,Copyright &copy; 2017.All rights reserved.</p>
-  </div>
-  </footer>
-  </body>
+  <footer><!--this property is for the footer part in the page,this is for footer-->
+    <div class="icon"><!--this property is to create division inside the footer part named icon to insert icons in the footer section -->
+    <a href="https://wwww.facebook.com/"><i class="fa fa-facebook-official"></i></a><!--this pro[erty helps to creat icon and to create link of facebook.this code is from w3schools.com-->
+    <a href="https://wwww.twitter.com/"><i class="fa fa-twitter-square"></i></a><!--this pro[erty helps to create icon and to create link of twitter.this code is from w3schools.com-->
+    <a href="https://wwww.yahoo.com/"><i class="fa fa-yahoo"></i></a><!--this pro[erty helps to creat icon and to create link of yahoo.this code is from w3schools.com-->
+    <a href="https://wwww.google.com/"><i class="fa fa-google-plus-square"></i></a><!--this pro[erty helps to creat icon and to create link of google.this code is from w3schools.com-->
+  </div><!--the icon division ends here-->
+   <div class="copy"><!--this is the new divison inside the footer named copy-->
+      <p>milan,Copyright &copy; 2017.All rights reserved.</p><!--this tag is for the copyright as the paragraph-->
+   </div><!--the copy division ends here-->
+ </footer><!--the footer part ends here -->
+</body><!--the body tag ends here-->
 </html>
