link on icons and comments on codes

--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@ UN ID:16418532
   </header><!--header of this page ends here-->
   <section class="contact">
     <div class="form">
-      <form>
+      <form><!--form section starts from here-->
         <label>Name</label><br>
-        <input type="text" id="fname" name="fname" placeholder="enter your first name"><br><br>
+        <input type="text" id="fname" name="fname" placeholder="enter your first name"><br><br><!--this property makes the form which is taken from w3schools-->
         <label>Email ID</label><br>
         <input type="text" id="lname" name="lname" placeholder="enter your surname"><br><br>
         <label>Subject</label><br>
@@ -44,7 +44,7 @@ UN ID:16418532
         <label>Message</label><br>
         <textarea rows="10" cols="30" placeholder="msg..."></textarea><br><br>
         <input type="submit" value="submit">
-     </form>
+     </form><!--form ends here-->
    </div>
     <div class="tel">
        <h3>Tel No:<h3>
@@ -55,13 +55,13 @@ UN ID:16418532
    <div class="foto">
      <img src="image/jhanda.JPG" alt="Sorry image couldn't be loaded">
    </div>
-  </section>
+ </section><!--seaction tag ends here-->
   <footer><!--this property is for the footer part in the page,this is for footer-->
     <div class="icon"><!--this property is to create division inside the footer part named icon to insert icons in the footer section -->
-    <a href="https://wwww.facebook.com/"><i class="fa fa-facebook-official"></i></a><!--this pro[erty helps to creat icon and to create link of facebook.this code is from w3schools.com-->
-    <a href="https://wwww.twitter.com/"><i class="fa fa-twitter-square"></i></a><!--this pro[erty helps to create icon and to create link of twitter.this code is from w3schools.com-->
-    <a href="https://wwww.yahoo.com/"><i class="fa fa-yahoo"></i></a><!--this pro[erty helps to creat icon and to create link of yahoo.this code is from w3schools.com-->
-    <a href="https://wwww.google.com/"><i class="fa fa-google-plus-square"></i></a><!--this pro[erty helps to creat icon and to create link of google.this code is from w3schools.com-->
+    <a href="https://www.facebook.com/"><i class="fa fa-facebook-official"></i></a><!--this pro[erty helps to creat icon and to create link of facebook.this code is from w3schools.com-->
+    <a href="https://www.twitter.com/"><i class="fa fa-twitter-square"></i></a><!--this pro[erty helps to create icon and to create link of twitter.this code is from w3schools.com-->
+    <a href="https://www.yahoo.com/"><i class="fa fa-yahoo"></i></a><!--this pro[erty helps to creat icon and to create link of yahoo.this code is from w3schools.com-->
+    <a href="https://www.google.com/"><i class="fa fa-google-plus-square"></i></a><!--this pro[erty helps to creat icon and to create link of google.this code is from w3schools.com-->
   </div><!--the icon division ends here-->
    <div class="copy"><!--this is the new divison inside the footer named copy-->
       <p>milan,Copyright &copy; 2017.All rights reserved.</p><!--this tag is for the copyright as the paragraph-->
