--- a/cv.html
+++ b/cv.html
@@ -33,14 +33,14 @@ UN ID:16418532
       </div><!--the search class division ends here-->
   </header><!--header of this page ends here-->
 
-  <section class="cvsection">
-    <div class="milan">
+  <section class="cvsection"><!--this tag differentiate the section inside the body below header-->
+    <div class="milan"><!--this is for division inside the section having class milan-->
         <h1>MILAN SHRESTHA</h1>
-    </div>
-      <div class="cv">
+    </div><!--the milan class division ends here-->
+      <div class="cv"><!--this is new division-->
         <div class=aboutme>
           <h2>Personal Details</h2>
-            <ul>
+            <ul><!--list for class about me starts from here-->
               <li>Name: Mr.  Milan Shrestha</li>
               <li>Father's Name: Mr. Bishnu Prasad Shresth</li>
               <li>D.O.B(Date Of Birth): 24 may 1995</li>
@@ -50,14 +50,14 @@ UN ID:16418532
               <li>Nationality: Neplease</li>
               <li>Religion: Hindu</li>
               <li>Contact No: +977 9846429243</li>
-            </ul>
+            </ul><!--the list tag for class about me ends here-->
             <h2>Language</h2>
               <ul>
                 <li>Nepali</li>
                 <li>English</li>
                 <li>Hindi</li>
               </ul>
-          </div>
+          </div><!--division ends here-->
           <div class="education">
               <h2>Education</h2>
                 <ul>
@@ -83,10 +83,10 @@ UN ID:16418532
       </section>
     <footer><!--this property is for the footer part in the page,this is for footer-->
       <div class="icon"><!--this property is to create division inside the footer part named icon to insert icons in the footer section -->
-        <a href="https://wwww.facebook.com/"><i class="fa fa-facebook-official"></i></a><!--this pro[erty helps to creat icon and to create link of facebook.this code is from w3schools.com-->
-        <a href="https://wwww.twitter.com/"><i class="fa fa-twitter-square"></i></a><!--this pro[erty helps to create icon and to create link of twitter.this code is from w3schools.com-->
-        <a href="https://wwww.yahoo.com/"><i class="fa fa-yahoo"></i></a><!--this pro[erty helps to creat icon and to create link of yahoo.this code is from w3schools.com-->
-        <a href="https://wwww.google.com/"><i class="fa fa-google-plus-square"></i></a><!--this pro[erty helps to creat icon and to create link of google.this code is from w3schools.com-->
+        <a href="https://www.facebook.com/"><i class="fa fa-facebook-official"></i></a><!--this pro[erty helps to creat icon and to create link of facebook.this code is from w3schools.com-->
+        <a href="https://www.twitter.com/"><i class="fa fa-twitter-square"></i></a><!--this pro[erty helps to create icon and to create link of twitter.this code is from w3schools.com-->
+        <a href="https://www.yahoo.com/"><i class="fa fa-yahoo"></i></a><!--this pro[erty helps to creat icon and to create link of yahoo.this code is from w3schools.com-->
+        <a href="https://www.google.com/"><i class="fa fa-google-plus-square"></i></a><!--this pro[erty helps to creat icon and to create link of google.this code is from w3schools.com-->
       </div><!--the icon division ends here-->
       <div class="copy"><!--this is the new divison inside the footer named copy-->
         <p>milan,Copyright &copy; 2017.All rights reserved.</p><!--this tag is for the copyright as the paragraph-->
