--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@ UN ID:16418532
   <a href="index.html"><img src="image/milawn.jpg" alt="sorry image couldn't be loaded"></a><!--this property is for inserting the logo picture in the header and link while clicking on logo to go to home page-->
 </div><!--logo division ends here-->
     <div class="nav"><!--this new division is for navigation section to make navigation bar-->
-      <ul>
+      <ul><!--this properly helps yo make list in the page-->
         <li><a href="index.html">HOME</a></li><!--this property helps us to make navigation bar named home and to link between other navigations tags-->
         <li><a href="bio.html">BIOGRAPHY</a></li><!--this property helps us to make navigation bar named biography and to link between other navigations tags-->
         <li><a href="cv.html">CV</a></li><!--this property helps us to make navigation bar named cv and to link between other navigations tags-->
         <li><a href="contact.html">CONTACT</a></li><!--this property helps us to make navigation bar named contact and to link between other navigations tags-->
-      </ul>
+      </ul><!--the ul tag ends here-->
     </div><!--division for navigation bar ends here-->
       <div class="search"><!--on this new division this is for search inside the header-->
         <div class="sea"><!--this division is inside the search division to make search bar-->
@@ -38,17 +38,16 @@ UN ID:16418532
     </div><!--the image division ends here-->
     <div class="main"><!--this is the new division named main inside the seaction and this class is for inserting some text-->
       <h2>HELLO! I am MILAN SHRESTHA.</h2><!--this is header tag to build header-->
-      <p>hello ma mailjnfdhabkdb fuygfiuhn9f iffiiuhf ifgiyfi ifiwhf ifguygf f giqugfyu
-        ahsbdnhaisud iehfiuwf eehfiuhwef qwoueehfiuhw fhywniufeh wuufy9wur 8ueefh8whye 8ygfe 98ywehrf jkhdkjfkhad aljkdhflkja kljadhflkj lakjdjhfdlkj  8qwehfiy<p><!--this is the paragraph tag to write something inside it-->
+      <p>-Web Designer <p><!--this is the paragraph tag to write something inside it-->
     </div><!--the main division ends here-->
 
   </section><!--the section part named home ends here-->
   <footer><!--this property is for the footer part in the page,this is for footer-->
     <div class="icon"><!--this property is to create division inside the footer part named icon to insert icons in the footer section -->
-    <a href="https://wwww.facebook.com/"><i class="fa fa-facebook-official"></i></a><!--this pro[erty helps to creat icon and to create link of facebook.this code is from w3schools.com-->
-    <a href="https://wwww.twitter.com/"><i class="fa fa-twitter-square"></i></a><!--this pro[erty helps to create icon and to create link of twitter.this code is from w3schools.com-->
-    <a href="https://wwww.yahoo.com/"><i class="fa fa-yahoo"></i></a><!--this pro[erty helps to creat icon and to create link of yahoo.this code is from w3schools.com-->
-    <a href="https://wwww.google.com/"><i class="fa fa-google-plus-square"></i></a><!--this pro[erty helps to creat icon and to create link of google.this code is from w3schools.com-->
+    <a href="https://www.facebook.com/"><i class="fa fa-facebook-official"></i></a><!--this pro[erty helps to creat icon and to create link of facebook.this code is from w3schools.com-->
+    <a href="https://www.twitter.com/"><i class="fa fa-twitter-square"></i></a><!--this pro[erty helps to create icon and to create link of twitter.this code is from w3schools.com-->
+    <a href="https://www.yahoo.com/"><i class="fa fa-yahoo"></i></a><!--this pro[erty helps to creat icon and to create link of yahoo.this code is from w3schools.com-->
+    <a href="https://www.google.com/"><i class="fa fa-google-plus-square"></i></a><!--this pro[erty helps to creat icon and to create link of google.this code is from w3schools.com-->
   </div><!--the icon division ends here-->
    <div class="copy"><!--this is the new divison inside the footer named copy-->
       <p>milan,Copyright &copy; 2017.All rights reserved.</p><!--this tag is for the copyright as the paragraph-->
