--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@ UN ID:16418532
         <img src="image/milam.JPG" alt="image couldn't be loaded"><!--this tag is to insert image inside the seaction part of the page and if image not loaded it displays some message-->
     </div><!--the image division ends here-->
     <div class="main"><!--this is the new division named main inside the seaction and this class is for inserting some text-->
-      <h2>HELLO! I am MILAN SHRESTHA.</h2><!--this is header tag to build header-->
-      <p>-Web Designer <p><!--this is the paragraph tag to write something inside it-->
+      <h2>HELLO! I am MILAN SHRESTHA.</h2><br><!--this is header tag to build header-->
+      <p>Think. Simple.<p><!--this is the paragraph tag to write something inside it-->
+        <p>The little things are the most important.<p>
+          <p>I go where my passion takes me.<p>
     </div><!--the main division ends here-->
 
   </section><!--the section part named home ends here-->
